# machine-learning-zoomcamp-homework

./: README.md
01-intro/: homework 1.ipynb  homework.ipynb  intro to numpy and linear algebra.ipynb  intro to pandas.ipynb  linalg.ipynb
02-regression/: Homework 2.ipynb  Regression.ipynb
03-classification/: 03-lecture.ipynb
05-deployment/: 05-train-churn-model.ipynb  Midterm Project Delivery Handover.ipynb  fly.toml  marketing.py  predict.py  pyproject.toml  starter.ipynb  train.py
06-trees/: 06-trees-lecture.ipynb
07-midterm-project/: Dockerfile  README.md  fly.toml  main.py  mock_handover_data_nonlinear.csv  notebook.ipynb  predict.py  pyproject.toml  train.py
11-capstone-2/: Dockerfile  README.md  notebook_capstone_2.ipynb  predict.py  requirements.txt  train.py
